# AIchallenge

./: .gitignore  README.md  main.py  pyproject.toml
AI Engineering Part 1/AIeng1/: hello-world.ipynb  my-post-gen.ipynb  system-vs.user-prompt.ipynb
AI Engineering Part 1/AIeng2/: gradio.ipynb
AI Engineering Part 1/AIeng3/: digital-twin-arch1.ipynb  digital-twin-arch2.ipynb  template.ipynb
AI Engineering Part 1/AIeng4/: document_chunker.py
AI Engineering Part 1/AIeng5/: document_netflix_culture.txt  document_work_life_philosophy.txt
AI Engineering Part 1/AIeng5/chroma_db/: chroma.sqlite3
AI Engineering Part 1/HG-digital-twin-RAG/: app.py
AI Engineering Part 1/digital-twin-RAG copy/: app.py  digital-twin-RAG.ipynb  personal.txt
AI Engineering Part 2/: dice-roll-agent.ipynb  research-agent-claude.ipynb  research-agent.ipynb
AIeng1/: conversation_history.ipynb  system-vs.user-prompt.ipynb
AIeng2/: ai-wars.ipynb  caching.ipynb  digital-twin.ipynb  gradio.ipynb
AIeng3/: digital-twin-arch1.ipynb  digital-twin-arch2.ipynb  tool-calling.ipynb
AIeng4/: digital-twin-arch3.ipynb  digital-twin-arch4.ipynb
AIeng4/chroma_db/: chroma.sqlite3
AIeng4/digital-twin-RAG/: digital-twin-RAG.ipynb  document.txt
AIeng5/: document_2025_annual_report_intro.txt  netflix-agent.ipynb
AIeng5/digital-twin-RAG/: app.py  digital-twin-RAG.ipynb  resume.txt  sys-msg.txt
AIeng5/digital-twin-RAG/chroma_db/: chroma.sqlite3
HG-digital-twin-RAG/: document_chunker.py  requirements.txt
digital-twin-RAG copy/: app.py  college-university.txt  personal.txt
(+1 files in other folders)
