[project]
name = "aichallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
